<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>cloudgraph</groupId>
        <artifactId>cloudgraph</artifactId>
        <version>0.5</version>
    </parent>
    <groupId>cloudgraph</groupId>
    <artifactId>cloudgraph-hbase</artifactId>
    <packaging>jar</packaging>
    <version>0.5</version>
    <name>CloudGraph HBase Service</name>
    <dependencies>
        <dependency>
            <groupId>cloudgraph</groupId>
            <artifactId>cloudgraph-common</artifactId>
            <version>0.5</version>
        </dependency>
        <dependency>
            <groupId>cloudgraph</groupId>
            <artifactId>cloudgraph-config</artifactId>
            <version>0.5</version>
        </dependency>
        
        <!-- Plasma Dependencies -->
        <dependency>
            <groupId>plasma</groupId>
            <artifactId>plasma-common</artifactId>
            <version>1.1.3</version>
        </dependency>
        <dependency>
            <groupId>plasma</groupId>
            <artifactId>plasma-sdo</artifactId>
            <version>1.1.3</version>
        </dependency>

        <!-- HBase Dependencies -->
        <dependency>
            <groupId>commons-configuration</groupId>
            <artifactId>commons-configuration</artifactId>
            <version>1.6</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hadoop</groupId>
            <artifactId>hadoop-core</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.hbase</groupId>
            <artifactId>hbase</artifactId>
            <version>0.92.1</version>
        </dependency>
    </dependencies>
    <build>
        <finalName>cloudgraph-hbase</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.3</version>
                <!-- <configuration> <webXml>target/web.xml</webXml> </configuration> -->
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>plasma</groupId>
                <artifactId>plasma-maven-plugin</artifactId>
                <version>1.1.3</version>
                <executions>
                    <execution>
                        <id>sdo-create</id>
                        <configuration>
                            <action>create</action>
                            <dialect>java</dialect>
                            <systemProperties>
                                <property><name>log4j.configuration</name><value>log4j.properties</value></property>
                                <property><name>fuml.configuration</name><value>fuml-config.xml</value></property> 
                                <property><name>plasma.configuration</name><value>plasma-config.xml</value></property>
                            </systemProperties>
                            <additionalClasspathElements>
                                <param>${basedir}/src/main/resources</param>
                            </additionalClasspathElements>
                            <outputDirectory>${basedir}/target/generated-sources/java</outputDirectory>                            
                        </configuration>
                        <goals>
                            <goal>sdo</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>dsl-create</id>
                        <configuration>
                            <action>create</action>
                            <dialect>java</dialect>
                            <systemProperties>
                                <property><name>log4j.configuration</name><value>log4j.properties</value></property>
                                <property><name>fuml.configuration</name><value>fuml-config.xml</value></property> 
                                <property><name>plasma.configuration</name><value>plasma-config.xml</value></property>
                            </systemProperties>
                            <additionalClasspathElements>
                                <param>${basedir}/src/main/resources</param>
                            </additionalClasspathElements>
                            <outputDirectory>${basedir}/target/generated-sources/java</outputDirectory>                            
                        </configuration>
                        <goals>
                            <goal>dsl</goal>
                        </goals>
                    </execution>
                    <!-- 
                    <execution>
                        <id>compile-query-to-model</id>
                        <phase>generate-sources</phase>
                        <configuration>
                            <action>compile</action>
                            <sourceFile>${basedir}/src/test/resources/datatypes-query.xml</sourceFile>
                            <destFile>${basedir}/target/generated-sources/datatypes-real.mdxml</destFile>
                            <destFileType>xmi</destFileType>
                            <destNamespaceURI>http://cloudgraph.org/test/datatypes/real</destNamespaceURI>
                            <destNamespacePrefix>tx</destNamespacePrefix>
                            <systemProperties>
                                <property><name>log4j.configuration</name><value>log4j.properties</value></property>
                                <property><name>fuml.configuration</name><value>fuml-config.xml</value></property> 
                                <property><name>plasma.configuration</name><value>plasma-config.xml</value></property>
                            </systemProperties>
                            <additionalClasspathElements>
                                <param>${basedir}/src/main/resources</param>
                            </additionalClasspathElements>
                        </configuration>
                        <goals>
                            <goal>query</goal>
                        </goals>
                    </execution>
                    -->
                </executions>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>
                <version>1.7</version>
                <executions>
                  <execution>
                    <id>add-source</id>
                    <phase>generate-sources</phase>
                    <goals>
                      <goal>add-source</goal>
                    </goals>
                    <configuration>
                      <sources>
                        <source>${basedir}/target/generated-sources/java</source>
                      </sources>
                    </configuration>
                  </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.10</version>
                <configuration>
                    <additionalClasspathElements>
                        <additionalClasspathElement>${basedir}/src/main/resources</additionalClasspathElement>
                        <additionalClasspathElement>${basedir}/src/test/resources</additionalClasspathElement>
                    </additionalClasspathElements>                  
                     
                    <forkMode>pertest</forkMode>
                    <argLine>-Dlog4j.configuration=log4j.properties -Dfuml.configuration=fuml-config.xml -Dplasma.configuration=plasma-config.xml</argLine>
                    <!-- debug
                    <argLine>-Dlog4j.configuration=log4j.properties -Dfuml.configuration=fuml-config.xml -Dplasma.configuration=plasma-config.xml -Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,address=8001,server=y,suspend=y</argLine>
                    --> 
                    <!--
                    <argLine>-Xms250m</argLine>
                    <argLine>-Xmx500m</argLine>
                    <argLine>-XX:MaxPermSize=350m</argLine>
                    <argLine>-Xloggc:cloudgraph-test-gc.log</argLine>
                    <argLine>-XX:+PrintGCDetails</argLine>
                    
                    <argLine>-Xdebug</argLine>
                    <argLine>-Xnoagent</argLine>
                    <argLine>-Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n</argLine>
                    <argLine>-Djava.compiler=NONE</argLine>
                    <argLine>-Dlog4j.configuration=file:log4j.properties</argLine>
                    -->
                    <includes>
                        <include>**/*PartialRowKeyScan*</include> 
                    </includes> 
                     
                    <excludes>
                        <exclude>**/*Batch*</exclude> 
                    </excludes> 
                      
                     
                </configuration>
            </plugin>
            
            
        </plugins>
        <pluginManagement>
            <plugins>
                <!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
                <plugin>
                    <groupId>org.eclipse.m2e</groupId>
                    <artifactId>lifecycle-mapping</artifactId>
                    <version>1.0.0</version>
                    <configuration>
                        <lifecycleMappingMetadata>
                            <pluginExecutions>
                                <pluginExecution>
                                    <pluginExecutionFilter>
                                        <groupId>plasma</groupId>
                                        <artifactId>
                                            plasma-maven-plugin
                                        </artifactId>
                                        <versionRange>
                                            [1.1.3,)
                                        </versionRange>
                                        <goals>
                                            <goal>sdo</goal>
                                            <goal>dsl</goal>
                                            <goal>query</goal>
                                        </goals>
                                    </pluginExecutionFilter>
                                    <action>
                                        <ignore></ignore>
                                    </action>
                                </pluginExecution>
                            </pluginExecutions>
                        </lifecycleMappingMetadata>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
